--- a/src/main/resources/templates/fragment/fragments.html
+++ b/src/main/resources/templates/fragment/fragments.html
@@ -75,10 +75,10 @@
                 </div>
             </div>
             <div class="dropdown">
-                <button>Chambers</button>
+                <button>Rooms</button>
                 <div class="dropdown-content">
-                    <button onclick="window.location.href='http://localhost:8080/chamber/create-chamber'">Create a chamber</button>
-                    <button onclick="window.location.href='http://localhost:8080/chamber/chambers'">See chambers</button>
+                    <button onclick="window.location.href='http://localhost:8080/chamber/create-chamber'">Create a room</button>
+                    <button onclick="window.location.href='http://localhost:8080/chamber/chambers'">See Rooms</button>
                 </div>
             </div>
             <div class="dropdown">
