--- a/src/main/resources/templates/user/users.html
+++ b/src/main/resources/templates/user/users.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Users</title>
     <th:block th:replace="~{ /fragment/fragments :: css }"></th:block>
 </head>
 <body>
 <th:block th:replace="~{ /fragment/fragments :: header }"></th:block>
     <main class="container">
-        <h1>Liste des utilisateurs</h1>
+        <h1>Users</h1>
 
         <table class="table">
             <thead>
