--- a/src/main/resources/templates/user/update-user.html
+++ b/src/main/resources/templates/user/update-user.html
@@ -1,104 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>User update</title>
     <th:block th:replace="~{ /fragment/fragments :: css }"></th:block>
+    <style>
+        /* Ajoutez vos styles personnalisés ici */
+        /* Par exemple, pour changer la couleur du bouton "Back" */
+        .back-btn {
+            background-color: #FF5733;
+            color: white;
+        }
+
+        .user-form {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .user-form h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .user-form .form-group {
+            margin-bottom: 20px;
+        }
+
+        .user-form label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .user-form input[type="text"],
+        .user-form input[type="number"],
+        .user-form input[type="password"],
+        .user-form input[type="date"] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+        }
+
+        .user-form .form-error {
+            color: red;
+        }
+
+        .user-form button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-<th:block th:replace="~{ /fragment/fragments :: header }"></th:block>
-<main class="container">
-    <h1>Modification user</h1>
-    <form th:action ="@{/user/update-user/{id} (id=${id}) }" method="post" th:object="${formulaire}">
-        <div class="form-group">
-            <label for="in-first_name">first name:</label>
-            <input type="text" th:field="*{first_name}" id="in-first_name">
-            <div th:if="${#fields.hasErrors('first_name')}" >
-                <span th:errors="*{first_name}" class="form-error"></span>
+    <th:block th:replace="~{ /fragment/fragments :: header }"></th:block>
+    <main class="container user-form">
+        <h1>User update</h1>
+        <form th:action="@{/user/update-user/{id}(id=${id})}" method="post" th:object="${formulaire}">
+            <div class="form-group">
+                <label for="in-first_name">First Name:</label>
+                <input type="text" th:field="*{first_name}" id="in-first_name">
+                <div th:if="${#fields.hasErrors('first_name')}">
+                    <span th:errors="*{first_name}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-last_name">last name:</label>
-            <input type="text" th:field="*{last_name}" id="in-last_name">
-            <div th:if="${#fields.hasErrors('last_name')}" >
-                <span th:errors="*{last_name}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-last_name">Last Name:</label>
+                <input type="text" th:field="*{last_name}" id="in-last_name">
+                <div th:if="${#fields.hasErrors('last_name')}">
+                    <span th:errors="*{last_name}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-email">email:</label>
-            <input type="text" th:field="*{email}" id="in-email">
-            <div th:if="${#fields.hasErrors('email')}" >
-                <span th:errors="*{email}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-email">Email:</label>
+                <input type="text" th:field="*{email}" id="in-email">
+                <div th:if="${#fields.hasErrors('email')}">
+                    <span th:errors="*{email}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-password">password:</label>
-            <input type="password" th:field="*{password}" id="in-password">
-            <div th:if="${#fields.hasErrors('password')}" >
-                <span th:errors="*{password}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-password">Password:</label>
+                <input type="password" th:field="*{password}" id="in-password">
+                <div th:if="${#fields.hasErrors('password')}">
+                    <span th:errors="*{password}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-confirmPassword">password confirm:</label>
-            <input type="password" th:field="*{confirmPassword}" id="in-confirmPassword">
-            <div th:if="${#fields.hasErrors('confirmPassword')}" >
-                <span th:errors="*{confirmPassword}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-confirmPassword">Password Confirm:</label>
+                <input type="password" th:field="*{confirmPassword}" id="in-confirmPassword">
+                <div th:if="${#fields.hasErrors('confirmPassword')}">
+                    <span th:errors="*{confirmPassword}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-birthDate">birth date:</label>
-            <input type="date" th:field="*{birthDate}" id="in-birthDate">
-            <div th:if="${#fields.hasErrors('birthDate')}" >
-                <span th:errors="*{birthDate}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-birthDate">Birth Date:</label>
+                <input type="date" th:field="*{birthDate}" id="in-birthDate">
+                <div th:if="${#fields.hasErrors('birthDate')}">
+                    <span th:errors="*{birthDate}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <h1>Modification de l'adresse</h1>
-        <div class="form-group">
-            <label for="in-addressForm.street">rue:</label>
-            <input type="text" th:field="*{addressForm.street}" id="in-addressForm.street">
-            <div th:if="${#fields.hasErrors('addressForm.street')}" >
-                <span th:errors="*{addressForm.street}" class="form-error"></span>
+            <h1>User Address</h1>
+            <div class="form-group">
+                <label for="in-addressForm.street">Street:</label>
+                <input type="text" th:field="*{addressForm.street}" id="in-addressForm.street">
+                <div th:if="${#fields.hasErrors('addressForm.street')}">
+                    <span th:errors="*{addressForm.street}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-addressForm.number">nombre:</label>
-            <input type="number" th:field="*{addressForm.number}" id="in-addressForm.number">
-            <div th:if="${#fields.hasErrors('addressForm.number')}" >
-                <span th:errors="*{addressForm.number}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-addressForm.number">Number:</label>
+                <input type="number" th:field="*{addressForm.number}" id="in-addressForm.number">
+                <div th:if="${#fields.hasErrors('addressForm.number')}">
+                    <span th:errors="*{addressForm.number}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-addressForm.box">box:</label>
-            <input type="text" th:field="*{addressForm.box}" id="in-addressForm.box">
-            <div th:if="${#fields.hasErrors('addressForm.box')}" >
-                <span th:errors="*{addressForm.box}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-addressForm.box">Box:</label>
+                <input type="text" th:field="*{addressForm.box}" id="in-addressForm.box">
+                <div th:if="${#fields.hasErrors('addressForm.box')}">
+                    <span th:errors="*{addressForm.box}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-addressForm.city">city:</label>
-            <input type="text" th:field="*{addressForm.city}" id="in-addressForm.city">
-            <div th:if="${#fields.hasErrors('addressForm.city')}" >
-                <span th:errors="*{addressForm.city}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-addressForm.city">City:</label>
+                <input type="text" th:field="*{addressForm.city}" id="in-addressForm.city">
+                <div th:if="${#fields.hasErrors('addressForm.city')}">
+                    <span th:errors="*{addressForm.city}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-addressForm.zip">zip:</label>
-            <input type="number" th:field="*{addressForm.zip}" id="in-addressForm.zip">
-            <div th:if="${#fields.hasErrors('addressForm.zip')}" >
-                <span th:errors="*{addressForm.zip}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-addressForm.zip">Zip:</label>
+                <input type="number" th:field="*{addressForm.zip}" id="in-addressForm.zip">
+                <div th:if="${#fields.hasErrors('addressForm.zip')}">
+                    <span th:errors="*{addressForm.zip}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="in-addressForm.country">country:</label>
-            <input type="text" th:field="*{addressForm.country}" id="in-addressForm.country">
-            <div th:if="${#fields.hasErrors('addressForm.country')}" >
-                <span th:errors="*{addressForm.country}" class="form-error"></span>
+            <div class="form-group">
+                <label for="in-addressForm.country">Country:</label>
+                <input type="text" th:field="*{addressForm.country}" id="in-addressForm.country">
+                <div th:if="${#fields.hasErrors('addressForm.country')}">
+                    <span th:errors="*{addressForm.country}" class="form-error"></span>
+                </div>
             </div>
-        </div>
-        <button type="submit">Envoyer</button>
-    </form>
-</main>
+            <button type="submit">Update</button>
+        </form>
+    </main>
 
-<th:block th:replace="~{ /fragment/fragments :: footer }"></th:block>
+    <th:block th:replace="~{ /fragment/fragments :: footer }"></th:block>
 </body>
 </html>
